# py_shiny_semantic

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  app.py  demo.py  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: unit-test.yml
app/: __init__.py  _app_layout.py  main.py
app/helpers/: __init__.py  feature_section.py  header.py  hero.py  sidebar.py
app/modules/: __init__.py  _feature_layout.py  button_module.py  checkbox_module.py  dropdown_module.py  emoji_module.py  flag_module.py  header_module.py  icon_module.py  input_module.py  modal_module.py  slider_module.py
app/ui_helpers/: __init__.py  feature_section.py  feature_subsection.py
apps/: __init__.py  app_buttons.py
example/: _app_layout.py  main.py
example/modules/: __init__.py  _feature_layout.py  input_module.py  statistic_module.py
examples/: __init__.py
examples/components_demo/: _app_layout.py  main.py
examples/components_demo/modules/: checkbox_module.py  icon_module.py
examples/distributions_demo/: app.py  main.py  stats.py
shiny_semantic/: __init__.py  _utils.py  button.py  page.py
shiny_semantic/collections/: __init__.py
shiny_semantic/elements/: __init__.py  button.py  button2.py  container.py  divider.py  emoji.py  flag.py  header.py  icon.py  input.py  segment.py
shiny_semantic/modules/: __init__.py  checkbox.py  dropdown.py  modal.py  slider.py
shiny_semantic/tests/: test_button.py  test_checkbox.py  test_container.py  test_divider.py  test_dropdown.py  test_emoji.py  test_flag.py  test_header.py  test_icon.py  test_input.py  test_modal.py  test_page_semantic.py  test_segment.py  test_slider.py
shiny_semantic/types/: __init__.py
shiny_semantic/typings/: __init__.py
shiny_semantic/views/: __init__.py  statistic.py
shiny_semantic/www/: shiny-semantic-bindings.js  shiny-semantic-button.js
shiny_semantic/www/bindings/: semanticButton.js  semanticCheckbox.js  semanticCheckboxGroup.js  semanticDropdown.js  semanticModal.js  semanticSlider.js
static/: index.html
tests/: test_button.py  test_divider.py  test_dropdown.py  test_emoji.py  test_flag.py  test_header.py  test_icon.py  test_input.py  test_page_semantic.py  test_segment.py  test_statistic.py
