[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiny_semantic"
version = "0.0.4"
description = "Semantic UI components in Shiny for Python"
readme = "README.md"
authors = [
    { name = "Pavel Demin", email = "pavel.demin@appsilon.com" },
    { name = "Kamil Żyła", email = "kamil@appsilon.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]
keywords = ["shiny", "semantic", "web"]
dependencies = ["shiny >= 0.2.9"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "pre-commit", "bumpver"]

[project.urls]
GitHub = "https://github.com/Appsilon/py_shiny_semantic"

[tool.bumpver]
current_version = "0.0.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"shiny_semantic/__init__.py" = ["{version}"]
